# MeMoTo

./: .gitignore  README.md
.github/workflows/: linux_x86_64_build.yml  macosx_build.yml  windows_x86_64_bulid.yml
MMT/: .gitignore  AggregationConfiguration.cpp  AggregationConfiguration.h  AggregationGraphicsItem.cpp  AggregationGraphicsItem.h  CMakeLists.txt  ChoiceConfiguration.cpp  ChoiceConfiguration.h  ChoiceGraphicsItem.cpp  ChoiceGraphicsItem.h  ClassConfiguration.cpp  ClassConfiguration.h  ClassDiagramScene.cpp  ClassDiagramScene.h  ClassGraphicsItem.cpp  ClassGraphicsItem.h  ClassToolBoxScene.cpp  ClassToolBoxScene.h  CollaborativeClient.cpp  CollaborativeClient.h  CollaborativeServer.cpp  CollaborativeServer.h  CompositionConfiguration.cpp  CompositionConfiguration.h  CompositionGraphicsItem.cpp  CompositionGraphicsItem.h  ConfigLineEdit.cpp  ConfigLineEdit.h  ConfigList.cpp  ConfigList.h  ConfigWidget.cpp  ConfigWidget.h  ConnectableTool.h  ConnectionDefinitions.h  Connector.cpp  Connector.h  ConnectorTool.h  ContainerTool.h  DiagramGraphicsView.cpp  DiagramGraphicsView.h  (+100 more)
MMT/CommonGraphics/: ConfigLineEdit.cpp  ConfigLineEdit.h  ConfigList.cpp  ConfigList.h  ConfigWidget.cpp  ConfigWidget.h  DoubleArrowGraphicsItem.h  GraphicConnector.cpp  GraphicConnector.h  GraphicsBezierCurve.cpp  GraphicsBezierCurve.h  GraphicsRoundedRectItem.h  HandleGraphicsItem.cpp  I_SquarishGraphicsItem.cpp  I_SquarishGraphicsItem.h
MMT/ConfigurationContexts/: AggregationConfiguration.cpp  AggregationConfiguration.h  ChoiceConfiguration.cpp  ChoiceConfiguration.h  ClassConfiguration.cpp  ClassConfiguration.h  CloseWithoutSavingConfiguration.cpp  CloseWithoutSavingConfiguration.h  CompositionConfiguration.cpp  CompositionConfiguration.h  ExternalClassConfiguration.cpp  ExternalClassConfiguration.h  FindConfiguration.cpp  FindConfiguration.h  GeneralizationConfiguration.cpp  GeneralizationConfiguration.h  ImplementationConfiguration.cpp  ImplementationConfiguration.h  LoadFileConfiguration.cpp  LoadFileConfiguration.h  PrintImageConfiguration.cpp  PrintImageConfiguration.h  SaveFileConfiguration.cpp  SaveFileConfiguration.h  SharingConfiguration.cpp  SharingConfiguration.h  StateConfiguration.cpp  StateConfiguration.h  TransitionConfiguration.cpp  TransitionConfiguration.h
MMT/DiagramScenes/: ClassDiagramScene.cpp  ClassDiagramScene.h  SMDiagramScene.cpp  SMDiagramScene.h
MMT/Engine/: ConnectableTool.h  ConnectionDefinitions.h  Connector.cpp  Connector.h  ConnectorTool.h  ContainerTool.h  DiagramGraphicsView.cpp  DiagramGraphicsView.h  ErrorDisplayer.cpp  ErrorDisplayer.h  GridReferential.cpp  GridReferential.h  HumanReadableColor.cpp  HumanReadableColor.h  I_ClassGraphicsItem.cpp  I_ClassGraphicsItem.h  I_CloseWithoutSavingConfigurationListener.h  I_ConfigLineEditListener.h  I_Configurable.h  I_ConfigurationContent.cpp  I_ConfigurationContent.h  I_Connectable.h  I_ConnectableContainer.cpp  I_ConnectableContainer.h  I_ConnectionListener.h  I_Connector.h  I_ContainerGraphicsItem.cpp  I_ContainerGraphicsItem.h  I_ContainersContainer.h  I_DiagramContainer.cpp  I_DiagramContainer.h  I_DiagramListener.h  I_FileManager.h  I_FindConfigurationListener.h  I_GraphicsItem.h  I_LoadFileConfigurationListener.h  I_PrintImageConfigurationListener.h  I_SaveFileConfigurationListener.h  I_Selectable.h  I_Serializable.h  (+15 more)
MMT/GraphicsItems/: AggregationGraphicsItem.cpp  AggregationGraphicsItem.h  ChoiceGraphicsItem.cpp  ChoiceGraphicsItem.h  ClassGraphicsItem.cpp  ClassGraphicsItem.h  CompositionGraphicsItem.cpp  CompositionGraphicsItem.h  DoubleArrowGraphicsItem.cpp  EntryStateGraphicsItem.cpp  EntryStateGraphicsItem.h  ExternalClassGraphicsItem.cpp  ExternalClassGraphicsItem.h  GeneralizationGraphicsItem.cpp  GeneralizationGraphicsItem.h  HandleGraphicsItem.cpp  HandleGraphicsItem.h  ImplementationGraphicsItem.cpp  ImplementationGraphicsItem.h  InitialStateGraphicsItem.cpp  InitialStateGraphicsItem.h  StateGraphicsItem.cpp  StateGraphicsItem.h  TransitionGraphicsItem.cpp  TransitionGraphicsItem.h  TransitionGraphicsLabel.cpp  TransitionGraphicsLabel.h
MMT/Sharing/: CollaborativeClient.cpp  CollaborativeClient.h  CollaborativeServer.cpp  CollaborativeServer.h  I_DataManager.h  I_SharingConfigurationListener.h  SharingManager.cpp  SharingManager.h
MMT/ToolBoxScenes/: ClassToolBoxScene.cpp  ClassToolBoxScene.h  SMToolBoxScene.cpp  SMToolBoxScene.h
MMT/logo/: draft.xcf
MMT/tests/: CMakeLists.txt
MMT/tests/CommonGraphics/: CMakeLists.txt  TestConfigWidget.cpp  TestConfigWidget.h
MMT/tests/Engine/: CMakeLists.txt  TestI_Configurable.cpp  TestI_Configurable.h
MMT/tests/stubs/: CMakeLists.txt
MMT/tests/stubs/Engine/: ConfigWidget.h
doc/: CollaborativeClient.memoto  CollaborativeServer.memoto  MeMoTo.memoto  MyClass1.json
toolchains/: Dockerfile  README.md  common.sh
toolchains/apple/: Dockerfile  README.md
toolchains/apple/aarch64/: Dockerfile  toolchain_host_linux.cmake
toolchains/linux/: Dockerfile  MeMoTo.desktop  README.md
toolchains/linux/x86_64/: Dockerfile  build.sh
toolchains/macosx/: Dockerfile
toolchains/windows/x86_64/: Dockerfile  build.sh
